// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Renderers/AnyRenderer Any Renderer 1`] = `
<span>
   - 
</span>
`;

exports[`Storyshots Renderers/AnyRenderer Array 1`] = `
<pre>
  <code>
    [
  "foo",
  true,
  false,
  "2020-01-01T00:00:00.000Z"
]
  </code>
</pre>
`;

exports[`Storyshots Renderers/AnyRenderer Boolean False 1`] = `
<span
  className="magic-boolean"
>
  No
</span>
`;

exports[`Storyshots Renderers/AnyRenderer Boolean True 1`] = `
<span
  className="magic-boolean"
>
  Yes
</span>
`;

exports[`Storyshots Renderers/AnyRenderer Date 1`] = `
<time
  dateTime={"2020-01-01T00:00:00.000Z"}
  title="2020-01-01T00:00:00+00:00"
>
  January 1, 2020
</time>
`;

exports[`Storyshots Renderers/AnyRenderer Date String 1`] = `
<time
  dateTime={"2020-01-01T00:00:00.000Z"}
  title="2020-01-01T00:00:00+00:00"
>
  January 1, 2020
</time>
`;

exports[`Storyshots Renderers/AnyRenderer Number 1`] = `"5"`;

exports[`Storyshots Renderers/AnyRenderer Obj 1`] = `
<pre>
  <code>
    {
  "array": [
    "foo",
    true,
    false,
    "2020-01-01T00:00:00.000Z"
  ],
  "date": "2020-01-01T00:00:00.000Z",
  "false": false,
  "foo": "foo",
  "true": true
}
  </code>
</pre>
`;

exports[`Storyshots Renderers/AnyRenderer String 1`] = `"foo"`;

exports[`Storyshots Renderers/AnyRenderer With Overrides 1`] = `
<table>
  <tr>
    <th>
      string
    </th>
    <td>
      foo
    </td>
  </tr>
  <tr>
    <th>
      boolean
    </th>
    <td>
      <span
        className="magic-boolean"
      >
        you got it
      </span>
    </td>
  </tr>
  <tr>
    <th>
      date
    </th>
    <td>
      <time
        dateTime={"2020-01-01T00:00:00.000Z"}
        title="2020-01-01T00:00:00+00:00"
      >
        01/01/2020
      </time>
    </td>
  </tr>
  <tr>
    <th>
      number
    </th>
    <td>
      5
    </td>
  </tr>
  <tr>
    <th>
      null
    </th>
    <td>
      nothing to see here
    </td>
  </tr>
</table>
`;

exports[`Storyshots Renderers/AnyRenderer With Overrides From Context 1`] = `
<table>
  <tr>
    <th>
      string
    </th>
    <td>
      foo
    </td>
  </tr>
  <tr>
    <th>
      boolean
    </th>
    <td>
      <span
        className="magic-boolean"
      >
        you got it
      </span>
    </td>
  </tr>
  <tr>
    <th>
      date
    </th>
    <td>
      <time
        dateTime={"2020-01-01T00:00:00.000Z"}
        title="2020-01-01T00:00:00+00:00"
      >
        01/01/2020
      </time>
    </td>
  </tr>
  <tr>
    <th>
      number
    </th>
    <td>
      5
    </td>
  </tr>
  <tr>
    <th>
      null
    </th>
    <td>
      nothing to see here
    </td>
  </tr>
</table>
`;
